# Software_quality_project

./: README.md
.github/workflows/: ci.yml
python/: Makefile  numberStrings.py
src/: CMakeLists.txt  Makefile  main.c  prime.c  prime.h
tests/CUnityTests/: prime_test.c
tests/PythonUnityTests/: test_numberStrings.py
